<resources>
    <string name="app_name">Phone Bill</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_create_phone_bill">CreatePhoneBill</string>
    <string name="readme">readme</string>
    <string name="add_phone_bill">add new phone bill</string>
    <string name="add_phone_call">add phone call to existing phone bill</string>
    <string name="search">search by start date</string>
    <string name="display">display phone bill</string>
    <string name="help_msg_phone_bill">Add new phone bill\nEnter customer name:</string>
    <string name="enter_customer_name">Customer name</string>
    <string name="create">create</string>
    <string name="title_activity_readme_screen">readmeScreen</string>
    <string name="go_back">Go Back</string>
    <string name="read_me">This app is written by Austen Hsiao for CS410, assignment 5\n\nThis application is used to organize phone bill data for a set of given users\n\nEach customer will have a set of phone calls. A user may:\n\t(1)Create a new phone bill\n\t(2)Add phone call data to a specific phone bill\n\t(3)Search phone calls within a given phone bill\n\t(4)Display all phone call data</string>
    <string name="title_activity_add_new_phone_call_page">addNewPhoneCallPage</string>
    <string name="caller_number">Caller #: xxx-xxx-xxxx</string>
    <string name="phonecallHelp">Add new phone call to existing phone bill\nSpecify the following information:</string>
    <string name="callee_number">Callee #: xxx-xxx-xxxx</string>
    <string name="phonebill_customer">PhoneBill Customer</string>
    <string name="start_date_mm_dd_yyyy">Start date: MM/dd/yyyy</string>
    <string name="start_time_hh_mm">Start time: hh:mm</string>
    <string name="end_date_mm_dd_yyyy">End date: MM/dd/yyyy</string>
    <string name="am_pm">am/pm</string>
    <string name="end_time_hh_mm">End time: hh:mm</string>
    <string name="add_call_data">Add Call Data</string>
    <string name="title_activity_search">search</string>
    <string name="searchDesc">Search user\'s phone bill by start date\n\nEnter a time window (start and end date) to search by:</string>
    <string name="main_page">Main Page</string>
    <string name="title_activity_show_matches">showMatches</string>
    <string name="backtosearch">Return to search</string>
    <string name="title_activity_display">display</string>
    <string name="displaymsg">Display all contents for a phone bill customer:</string>
    <string name="submit">Submit</string>
</resources>