<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPhoneCall">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/caller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:hint="@string/caller_number"
            android:hyphenationFrequency="none"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:maxLength="12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pbName" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="394dp"
            android:layout_height="53dp"
            android:layout_marginTop="80dp"
            android:text="@string/phonecallHelp"
            android:textAlignment="center"
            android:textColor="#2F47D1"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Add new phone call to existing phone bill\nSpecify the following information:" />

        <EditText
            android:id="@+id/callee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:hint="@string/callee_number"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:maxLength="12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/caller" />

        <EditText
            android:id="@+id/pbName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:hint="@string/phonebill_customer"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:hint="@string/start_date_mm_dd_yyyy"
            android:inputType="date"
            android:maxLength="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/callee"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:hint="@string/start_time_hh_mm"
            android:importantForAutofill="no"
            android:inputType="time"
            android:maxLength="5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startDate" />

        <EditText
            android:id="@+id/startAM_PM"
            android:layout_width="100dp"
            android:layout_height="47dp"
            android:layout_marginTop="312dp"
            android:ems="10"
            android:hint="@string/am_pm"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="2"
            app:layout_constraintStart_toEndOf="@+id/startTime"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/endAM_PM"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="408dp"
            android:ems="10"
            android:hint="@string/am_pm"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="2"
            app:layout_constraintStart_toEndOf="@+id/endTime"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:hint="@string/end_date_mm_dd_yyyy"
            android:inputType="date"
            android:maxLength="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startTime"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/endTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:hint="@string/end_time_hh_mm"
            android:inputType="time"
            android:maxLength="5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/endDate"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/addPhoneCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:onClick="addPhoneCall"
            android:text="@string/add_call_data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/endTime" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>